# lmrtfy

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  404.html  CHANGELOG.md  CNAME  LICENSE  README.md  index.html  lmrtfy_cli_completion  mkdocs.yml  mkdocs_gh_pages.yml  mkdocs_rtd.yml  pyproject.toml  requirements.txt  sitemap.xml  test.py  versions.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: codeql-analysis.yml  create_PyPI_Package.yml  github_pages.yml  linter  linter.yml  publish_github_pages.yml  publish_github_pages_develop.yml  publish_github_pages_latest.yml  publish_github_pages_stable.yml  pulll_request_template.md  release_pypi.yml
0.0/: 404.html  index.html  sitemap.xml
0.0.10/: 404.html  index.html  sitemap.xml
0.0.10/CHANGELOG/: index.html
0.0.10/cli_reference/: index.html
0.0.10/contributing/: index.html
0.0.10/quickstart/: index.html
0.0.10/report_bugs/: index.html
0.0.10/roadmap/: index.html
0.0.10/rtd/: index.html
0.0.10/search/: search_index.json
0.0.11/: 404.html  index.html  requirements.txt  sitemap.xml
0.0.11/CHANGELOG/: index.html
0.0.11/cli_reference/: index.html
0.0.11/contributing/: index.html
0.0.11/quickstart/: index.html
0.0.11/report_bugs/: index.html
0.0.11/roadmap/: index.html
0.0.11/rtd/: index.html
0.0.11/search/: search_index.json
0.0.11/stylesheets/: extra.css
0.0.11b0/: 404.html  index.html  sitemap.xml
0.0.11b0/CHANGELOG/: index.html
0.0.11b0/cli_reference/: index.html
0.0.11b0/contributing/: index.html
0.0.11b0/javascript/: mixpanel.js
0.0.11b0/quickstart/: index.html
0.0.11b0/report_bugs/: index.html
0.0.11b0/roadmap/: index.html
0.0.11b0/rtd/: index.html
0.0.11b0/search/: search_index.json
0.0.12/: 404.html  index.html  requirements.in  requirements.txt  sitemap.xml
0.0.12/CHANGELOG/: index.html
0.0.12/cli_reference/: index.html
0.0.12/contributing/: index.html
0.0.12/quickstart/: index.html
0.0.12/report_bugs/: index.html
0.0.12/roadmap/: index.html
0.0.12/rtd/: index.html
0.0.12/search/: search_index.json
0.0.13/: 404.html  index.html  objects.inv  sitemap.xml
0.0.13/CHANGELOG/: index.html
0.0.13/architecture/: index.html
0.0.13/cli_reference/: index.html
0.0.13/contributing/: index.html
0.0.13/quickstart/: index.html
0.0.13/report_bugs/: index.html
0.0.13/roadmap/: index.html
0.0.13/rtd/: index.html
0.0.13/search/: search_index.json
0.0.13/working_principle/: index.html
0.0.6/: 404.html  index.html  sitemap.xml
0.0.6/CHANGELOG/: index.html
0.0.6/about/: index.html
0.0.6/search/: search_index.json
0.0.7/: 404.html  index.html  objects.inv  sitemap.xml
0.0.7/CHANGELOG/: index.html
0.0.7/about/: index.html
0.0.7/contributing/: index.html
0.0.7/quickstart/: index.html
0.0.7/report_bugs/: index.html
0.0.7/roadmap/: index.html
0.0.7/search/: search_index.json
0.0.7b0/: 404.html  index.html  sitemap.xml
0.0.7b0/CHANGELOG/: index.html
0.0.7b0/about/: index.html
0.0.7b0/contributing/: index.html
0.0.7b0/quickstart/: index.html
0.0.7b0/report_bugs/: index.html
0.0.7b0/roadmap/: index.html
0.0.7b0/search/: search_index.json
0.0.8/: 404.html  index.html  objects.inv  sitemap.xml
0.0.8/CHANGELOG/: index.html
0.0.8/about/: index.html
0.0.8/contributing/: index.html
0.0.8/javascript/: mixpanel.js
0.0.8/quickstart/: index.html
0.0.8/report_bugs/: index.html
0.0.8/roadmap/: index.html
0.0.8/search/: search_index.json
0.0.9/: 404.html  index.html  objects.inv  sitemap.xml
0.0.9/CHANGELOG/: index.html
0.0.9/cli_reference/: index.html
0.0.9/contributing/: index.html
0.0.9/quickstart/: index.html
0.0.9/report_bugs/: index.html
0.0.9/roadmap/: index.html
0.0.9/search/: search_index.json
0.0.9b0/: 404.html  index.html  objects.inv  sitemap.xml
0.0.9b0/CHANGELOG/: index.html
0.0.9b0/about/: index.html
0.0.9b0/cli_reference/: index.html
0.0.9b0/contributing/: index.html
0.0.9b0/javascript/: mixpanel.js
0.0.9b0/quickstart/: index.html
0.0.9b0/report_bugs/: index.html
0.0.9b0/roadmap/: index.html
0.0.9b0/search/: search_index.json
0.0.9b0/stylesheets/: extra.css
CHANGELOG/: index.html
about/: index.html
dev/: 404.html  index.html  sitemap.xml
develop/: 404.html  index.html  sitemap.xml
docs/: CHANGELOG.md  about.md  cli_reference.md  contributing.md  examples.md  guide.md  index.md  quickstart.md  report_bugs.md  requirements.in  requirements.txt  roadmap.md  rtd.md  working_principle.md
latest/: 404.html  index.html
stable/: 404.html  index.html
(+321 files in other folders)
