# pyproject.toml
[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lmrtfy"
version = "0.0.4"
description = "Turn variables into program arguments. Auto-generates a CLI interface and an API using lmrtfy.de."
readme = "README.md"
authors = [{ name = "lmrtfy.de", email = "hello@lmrtfy.de" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["api", "generator", "cli"]
dependencies = [
        "certifi>=2022.5.18.1",
        "charset-normalizer>=2.0.12",
        "filehash>=0.2.dev1",
        "idna>=3.3",
        "numpy>=1.19.0",
        "PyYAML>=6.0",
        "requests>=2.28.0",
        "typing_extensions>=4.2.0",
        "urllib3>=1.26.9",
        "paho-mqtt",
        "fire",
        "pyjwt",
        "flask",
        "werkzeug",
        "cryptography",
        "coloredlogs"
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest", "numpy"]

[project.urls]
Homepage = "https://github.com/lmrtfy/lmrtfy"

[project.scripts]
lmrtfy = "lmrtfy.__main__:main"
