# pyproject.toml
[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lmrtfy"
version = "0.0.9"
description = "Turn variables into program arguments. Auto-generates a CLI interface and an API using lmrtfy.de."
readme = "README.md"
authors = [{ name = "lmrtfy.de", email = "hello@lmrtfy.de" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: System :: Software Distribution",
]
keywords = ["api", "generator", "cli"]
dependencies = [
        "certifi>=2022.5.18.1",
        "charset-normalizer>=2.0.12",
        "filehash>=0.2.dev1",
        "idna>=3.3",
        "numpy>=1.19.0",
        "PyYAML>=6.0",
        "requests>=2.28.0",
        "typing_extensions>=4.2.0",
        "urllib3>=1.26.9",
        "paho-mqtt",
        "fire",
        "pyjwt",
        "flask",
        "werkzeug",
        "cryptography",
        "coloredlogs",
        "packaging",
        "python-daemon",
        "makefun",
        "shortuuid"
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest", "numpy"]

[project.urls]
homepage = "https://lmrt.fyi"
repository = "https://github.com/lmrtfy/lmrtfy"
documentation = "https://lmrtfy.github.io/lmrtfy"

[project.scripts]
lmrtfy = "lmrtfy.__main__:main"

[tool.bumpver]
current_version = "0.0.9"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true 
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{pep440_version}"',
]
"src/lmrtfy/__init__.py" = [
  '__version__ = "{pep440_version}"',
]
".github/workflows/publish_github_pages_stable.yml" = [
  'VERSION: "MAJOR.MINOR.PATCH[PYTAGNUM]"',
]
".github/workflows/publish_github_pages_latest.yml" = [
    'VERSION: "MAJOR.MINOR.PATCH[PYTAGNUM]"',
]